src/index.css
html, body {
    min-width: 800px;
    font-family: SBSansText, sans-serif;
}

body, ul, li, p {
    margin: 0;
    padding: 0;
}

.required::before {
    content: '*';
    color: #ec464e;
    margin-right: 3px;
}

input.ant-input:placeholder-shown ~ .ant-input-suffix .anticon-close-circle {
    display: none;
}

.ant-input-clear-icon > svg,
.ant-picker-clear svg {
    fill: transparent;
    width: 19px;
    height: 19px;
    background: url(./static/images/cross.svg);
    margin-bottom: 3px;
}

.ant-checkbox-disabled.ant-checkbox-checked .ant-checkbox-inner {
    background-color: #09a552;
}

.ant-select-open .ant-select-arrow {
    transform: rotate(-180deg);
}

.ant-select-arrow {
    transition: transform 0.3s;
}

.ant-notification.ant-notification-topRight {
    overflow-y: scroll;
    overflow-x: hidden;
    max-height: calc(100% - 63px);
    top: 63px !important;
    margin-right: 0;
    margin-bottom: 0;
    scrollbar-width: none;
}

.ant-notification.ant-notification-topRight .ant-notification-notice {
    pointer-events: auto;
}

.ant-notification.ant-notification-topRight::-webkit-scrollbar {
    display: none !important;
}

.ant-notification.ant-notification-topRight > div {
    pointer-events: none;
    padding: 0 28px;
    display: flex;
    flex-direction: column-reverse;
}

#container-for-clearAll {
    position: fixed;
    top: 20px;
    right: 100px;
    z-index: 1011;
    box-shadow: 0px 3px 16px 1px rgba(0, 0, 0, 0.46);
}

.ant-form-item .ant-input-textarea-show-count::after {
    text-align: left;
    position: unset;
    margin-top: 4px;
    float: left;
    margin-bottom: -10px;
}

.ck.ck-editor__main ul {
    padding-inline-start: 40px;
}

.ant-table-tbody {
    vertical-align: top;
}

.ant-table-selection-column {
    vertical-align: middle;
}

